--- a/ListBox DataTemplate/ListBlab.csproj
+++ b/ListBox DataTemplate/ListBlab.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class\Employer\Employer.cs" />
     <Compile Include="ListBox\Template1\ListBoxTemplate1.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
