--- a/ListBox DataTemplate/ListBlab.csproj
+++ b/ListBox DataTemplate/ListBlab.csproj
@@ -99,7 +99,18 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\ico1.png" />
+    <Resource Include="Images\ico10.png" />
+    <Resource Include="Images\ico2.png" />
+    <Resource Include="Images\ico3.png" />
+    <Resource Include="Images\ico4.png" />
+    <Resource Include="Images\ico5.png" />
+    <Resource Include="Images\ico6.png" />
+    <Resource Include="Images\ico7.png" />
+    <Resource Include="Images\ico8.png" />
+    <Resource Include="Images\ico9.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\mainicon.png" />
   </ItemGroup>
